# stamon

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  TODO  example  example-via-tmux  feed.rkt  info.rkt  pista-feed-backlight-laptop.rs  pista-feed-backlight-laptop.sh  pista-feed-battery.c  pista-feed-bitcoin.sh  pista-feed-disk.rs  pista-feed-helium-account-balance.rs  pista-feed-memory.rs  pista-feed-mpd-rkt.rkt  pista-feed-mpd.rs  pista-feed-mpd.sh  pista-feed-net.rs  pista-feed-time.c  pista-feed-upower.rkt  pista-feed-volume.rs  pista-feed-volume.sh  pista-feed-weather-gov.rkt  pista-sensor-backlight  pista-sensor-backlight-laptop.rs  pista-sensor-backlight-monitor  pista-sensor-battery.c  pista-sensor-bitcoin  pista-sensor-bluetooth  pista-sensor-bluetooth.sh  pista-sensor-cpu-temp  pista-sensor-disk  pista-sensor-disk.sh  pista-sensor-helium-account-balance  pista-sensor-helium-account-balance.rs  pista-sensor-loadavg  pista-sensor-memory  (+26 more)
.github/: codecov.yml
.github/workflows/: check.yml  rust.yml  scheduled.yml  test.yml
examples/: direct.sh  via-tmux.sh
notes/: microphone-use.txt
pista-sensor-helium-account-balance-rs.src/: Cargo.toml
pista-sensor-helium-account-balance-rs.src/src/: main.rs
src/: lib.rs
src/lib/: alert.rs  clock.rs  disk.rs  log.rs  logger.rs  math.rs  mem.rs  mod.rs  pipeline.rs  process.rs
src/lib/backlight/: mod.rs
src/lib/bluetooth/: mod.rs
src/lib/disk/: mod.rs
src/lib/feeds/: mod.rs
src/lib/feeds/backlight/: mod.rs
src/lib/feeds/bluetooth/: bluetoothctl.rs  mod.rs
src/lib/feeds/disk/: mod.rs
src/lib/feeds/mem/: mod.rs
src/lib/feeds/mpd/: mod.rs  tests.rs
src/lib/feeds/net/: mod.rs
src/lib/feeds/net/if_operstate/: mod.rs
src/lib/feeds/net/wifi_link_qual/: mod.rs
src/lib/feeds/pulseaudio/: mod.rs  tests.rs
src/lib/feeds/upower/: mod.rs  msg.rs  state.rs  tests.rs
src/lib/feeds/weather/: mod.rs
src/lib/feeds/weather/noaa/: mod.rs
src/lib/feeds/weather/observatories/: mod.rs
src/lib/feeds/weather/observatories/nws/: mod.rs
src/lib/feeds/weather/observatories/owm/: mod.rs
src/lib/feeds/x11/: mod.rs
src/lib/mem/: mod.rs
src/lib/mpd/: mod.rs  tests.rs
src/lib/net/if_operstate/: mod.rs
src/lib/net/wifi_link_qual/: mod.rs
src/lib/pulseaudio/: mod.rs  tests.rs
src/lib/upower/: alert.rs  mod.rs  msg.rs  state.rs  tests.rs
src/lib/weather/: mod.rs
src/lib/weather/noaa/: mod.rs  tests.rs
src/lib/weather/openweathermap/: data.rs  mod.rs
src/lib/x11/: mod.rs
tests/: pactl-info.txt  pactl-list-sinks.txt  pactl-list-source-outputs.txt  upower-dump.txt  upower-monitor-detail.txt  weather-gov-current-observation.xml
