[package]
name = "pista-feeds"
version = "0.3.3"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = {version = "3.0", features = ["derive"]}
libc = "0.2.134"
mpd = "0.0.12"
notify = "5.0.0"
notify-rust = "4.8.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
serde = { version = "1.0.144", features = ["derive"] }
serde-xml-rs = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time"] }
x11 = { version = "2.20.0", features = ["xlib"] }
