[package]
name = "stamon"
version = "0.12.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/xandkar/stamon"
description = "Status monitors for textual status bars (such as barista, pista, etc.)"
keywords = ["dwm", "status bar", "pista", "barista", "suckless"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = {version = "4.2.7", features = ["derive"]}
libc = "0.2.134"
mpd = { git = "https://github.com/kstep/rust-mpd.git", version = "0.1.0" }
notify = "6.0.0" # Watch filesystem for changes.
notify-rust = "4.8.0" # Send notifications.
reqwest = {version = "0.11.11", default-features = false, features = ["blocking", "rustls-tls"]}
serde = { version = "1.0.144", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "local-time"] }
x11 = { version = "2.20.0", features = ["xlib"] }

[dev-dependencies]
proptest = "1.1.0"

###############################################################################
# binary size optimizations
# https://github.com/johnthagen/min-sized-rust
###############################################################################
[profile.release]
codegen-units = 1  # Disable parallelization, allowing maximum size reduction.
lto = true         # Enable Link Time Optimizations.
# panic = "abort"  # Disable stack unwind.
# strip = true     # Strip symbols.
# opt-level = "z"  # Optimize for size.
