[package]
name = "pista-sensor-helium-account-balance-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
binance = "0.18.4"
clap = {version = "3.0", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
reqwest = {version = "0.11.11", features = ["blocking"]}
#serde = "1.0.140"
serde_json = "1.0.82"
